@@ -33,6 +33,7 @@ since 1999.  If I missed your name, let me know.
 * Chris Bensend
 * Kevin Benton
 * Gary Berger
+* Jochen Bern
 * Tom Bertelson
 * Joel Berry
 * Olivier Beytrison
